Fix comment count and comment collapsing

--- a/public/css/asocial/_feed.scss
+++ b/public/css/asocial/_feed.scss
@@ -181,6 +181,10 @@
           margin-bottom: 0;
         }
 
+        &.comment-hidden {
+          display: none;
+        }
+
         // For now
         a.comment-delete { display: none; }
 
